<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/dawid_ber"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="@string/artist_title1"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:textStyle="bold"/>


        <ImageView
            android:id="@+id/img2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/img1"
            android:src="@drawable/orkiestra"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img1"
            android:textSize="36sp"
            android:text="@string/artist_title2"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:textStyle="bold"/>


        <ImageView
            android:id="@+id/img3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/img2"
            android:src="@drawable/chor"
            android:scaleType="centerCrop"/>

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img2"
            android:textSize="36sp"
            android:text="@string/artist_title3"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"
            android:textStyle="bold"/>

    </RelativeLayout>

</ScrollView>